[package]
name = "portlurker"
version = "0.1.3"
authors = ["Bart Noordervliet <bart@mmvi.nl>",
           "Mark Pentler <mark@elmarko.org>"]
license = "MIT"
description = "Port listener / honeypot with protocol guessing and safe string display"
readme = "README.md"

[dependencies]
yaml-rust = "0.4"
regex = "1"
rusqlite = "0.26"
chrono = "0.4"
nfq = "0.2"
libc = "0.2"
pnet = "0.28"
nix = "0.23"
