[package]
name = "portlurker"
version = "0.1.4"
edition = "2021"
authors = ["Bart Noordervliet <bart@mmvi.nl>",
           "Mark Pentler <mark@elmarko.org>"]
license = "MIT"
description = "Port listener / honeypot with protocol guessing and safe string display"
readme = "README.md"
repository = "https://github.com/bartnv/portlurker"

[dependencies]
yaml-rust = "0.4"
regex = "1"
rusqlite = "0.26"
chrono = "0.4"
nfq = "0.2"
libc = "0.2"
pnet = "0.28"
nix = "0.23"
tokio = { version = "1", features = [ "rt-multi-thread", "fs", "io-util", "sync", "net", "macros" ] }
tokio-io-timeout = "1"

[package.metadata.deb]
section = "network"
priority = "optional"
