[package]
name = "portlurker"
version = "0.1.5"
edition = "2021"
authors = ["Bart Noordervliet <bart@mmvi.nl>",
           "Mark Pentler <mark@elmarko.org>"]
license = "MIT"
description = "Port listener / honeypot with protocol guessing and safe string display"
readme = "README.md"
repository = "https://github.com/bartnv/portlurker"

[dependencies]
yaml-rust2 = "0"
regex = "1"
chrono = "0.4"
nfq = "0.2"
libc = "0.2"
pnet = "0.35"
nix = { version = "0", features = [ "socket", "net" ] }
tokio = { version = "1", features = [ "rt-multi-thread", "fs", "io-util", "sync", "net", "macros" ] }
tokio-io-timeout = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "any", "postgres", "mysql", "sqlite", "chrono" ] }

[package.metadata.deb]
section = "network"
priority = "optional"
